language/move-lang/tests/move_check/translated_ir_tests/signer/move_to_reference_to_args_flipped.exp
error: 

   ┌── tests/move_check/translated_ir_tests/signer/move_to_reference_to_args_flipped.move:4:9 ───
   │
 4 │         move_to<R>(R { f: false }, s)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'. Invalid argument for parameter '0'
   ·
 4 │         move_to<R>(R { f: false }, s)
   │                    -------------- The type: '0x8675309::M::R'
   ·
 4 │         move_to<R>(R { f: false }, s)
   │         ------- Is not compatible with: '&signer'
   │

error: 

   ┌── tests/move_check/translated_ir_tests/signer/move_to_reference_to_args_flipped.move:4:9 ───
   │
 4 │         move_to<R>(R { f: false }, s)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'. Invalid argument for parameter '1'
   ·
 3 │     fun t0(s: &signer) {
   │               ------- The type: '&signer'
   ·
 4 │         move_to<R>(R { f: false }, s)
   │                 - Is not compatible with: '0x8675309::M::R'
   │

error: 

    ┌── tests/move_check/translated_ir_tests/signer/move_to_reference_to_args_flipped.move:14:9 ───
    │
 14 │         move_to<R<bool>>(R { f: false }, s);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'. Invalid argument for parameter '0'
    ·
 14 │         move_to<R<bool>>(R { f: false }, s);
    │                          -------------- The type: '0x8675309::N::R<bool>'
    ·
 14 │         move_to<R<bool>>(R { f: false }, s);
    │         ------- Is not compatible with: '&signer'
    │

error: 

    ┌── tests/move_check/translated_ir_tests/signer/move_to_reference_to_args_flipped.move:14:9 ───
    │
 14 │         move_to<R<bool>>(R { f: false }, s);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'. Invalid argument for parameter '1'
    ·
 13 │     fun t0<T>(s: &signer) {
    │                  ------- The type: '&signer'
    ·
 14 │         move_to<R<bool>>(R { f: false }, s);
    │                 ------- Is not compatible with: '0x8675309::N::R<bool>'
    │

