language/move-lang/tests/move_check/translated_ir_tests/signer/move_to_reference_to_args_flipped.move
module M {
    resource struct R { f: bool }
    fun t0(s: &signer) {
        move_to<R>(R { f: false }, s)
    }
}
// check: MOVETO_TYPE_MISMATCH_ERROR

//! new-transaction

module N {
    resource struct R<T> { f: T }
    fun t0<T>(s: &signer) {
        move_to<R<bool>>(R { f: false }, s);
    }
}
// check: MOVETO_TYPE_MISMATCH_ERROR
